--- a/client/.env
+++ b/client/.env
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_PROJECT_ID=vast-dock-442020-q4
 REACT_APP_FIREBASE_STORAGE_BUCKET=vast-dock-442020-q4.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=415404074047
 REACT_APP_FIREBASE_APP_ID=1:415404074047:web:74033f864c39c70f41448a
+REACT_APP_GOOGLE_MAPS_API_KEY=your_new_api_key_here
