--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-big-calendar": "^1.16.3",
+    "react-big-calendar": "^1.17.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
